// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SVM Escrow src factory should generate cancelPrivate instruction 1`] = `
{
  "accounts": [
    {
      "isSigner": true,
      "isWritable": true,
      "pubkey": "11111111111111111111111111111112j",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "1111111111111111111111111111116B",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "11111111111111111111111111111114T",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "3pf4BAMrQPDhtY3xPfnjYdiViRmEVZmbBUHSG1UTjbiw",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "DCfwqvbJNpzmK7dTRwprUxGpGUXaZwYpUDuLMHkieUGf",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "14DvVcGoPg1Wh4fVbDcq9NHBxtMCXkqi7PczedJXFvFQ",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "11111111111111111111111111111111",
    },
  ],
  "data": "0x9ccb36b326482115",
  "programId": "2g4JDRMD7G3dK1PHmCnDAycKzd6e5sdhxqGBbs264zwz",
}
`;

exports[`SVM Escrow src factory should generate cancelPublic instruction 1`] = `
{
  "accounts": [
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "11111111111111111111111111111112j",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "1111111111111111111111111111116B",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "11111111111111111111111111111114T",
    },
    {
      "isSigner": true,
      "isWritable": true,
      "pubkey": "1111111111111111111111111111117u",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "Aikth6gKPGZbWbgkZSZumpXpBjTQLq2UUMccZ2CRhtSQ",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "3pf4BAMrQPDhtY3xPfnjYdiViRmEVZmbBUHSG1UTjbiw",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "DCfwqvbJNpzmK7dTRwprUxGpGUXaZwYpUDuLMHkieUGf",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "14DvVcGoPg1Wh4fVbDcq9NHBxtMCXkqi7PczedJXFvFQ",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "11111111111111111111111111111111",
    },
  ],
  "data": "0xaafe4e571f54760d",
  "programId": "2g4JDRMD7G3dK1PHmCnDAycKzd6e5sdhxqGBbs264zwz",
}
`;

exports[`SVM Escrow src factory should generate create instruction from order 1`] = `
{
  "accounts": [
    {
      "isSigner": true,
      "isWritable": true,
      "pubkey": "11111111111111111111111111111112",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "11111111111111111111111111111114",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "ExSWT3R6qMY3L9ZYtpmMpyF5aX7AsJVeaMuhEyTBodLG",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "7HaPZKcfHrCJEQLZ8PUmg7YCfCcjawWg3rw8soDFW6DM",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "FyHBiQBaN5FFGYkWxdFzmtFiHn4k8hBvBkc6dc52JSqr",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "SysvarRent111111111111111111111111111111111",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "11111111111111111111111111111111",
    },
  ],
  "data": "0x181ec828051c077711f8dd293e31c96da8ed3c186011fd0eb9036cce32f2e08c1c5fd5001b737907000064a7b3b6e00de8030000000000000a000000d2000000360100009a0100000a0000006e000000d200000000000000560500000000ca9a3b00000000000000000000000000000000000000000000000000000000f2225665649874b9106f6b2867062e48a345a9c98cf31836497a594465e851f4010000000000000001000000007b000000d310e2140100000000000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000004e8030000000000000000000000000000",
  "programId": "2g4JDRMD7G3dK1PHmCnDAycKzd6e5sdhxqGBbs264zwz",
}
`;

exports[`SVM Escrow src factory should generate withdrawPublic instruction 1`] = `
{
  "accounts": [
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "11111111111111111111111111111112j",
    },
    {
      "isSigner": true,
      "isWritable": true,
      "pubkey": "1111111111111111111111111111117u",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "Aikth6gKPGZbWbgkZSZumpXpBjTQLq2UUMccZ2CRhtSQ",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "11111111111111111111111111111114T",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "3pf4BAMrQPDhtY3xPfnjYdiViRmEVZmbBUHSG1UTjbiw",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "DCfwqvbJNpzmK7dTRwprUxGpGUXaZwYpUDuLMHkieUGf",
    },
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": "cKjt7npJFbBC1Lu5FvKmgnVCKYYrBsmCkAWUnSNHYN8",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb",
    },
    {
      "isSigner": false,
      "isWritable": false,
      "pubkey": "11111111111111111111111111111111",
    },
  ],
  "data": "0x9839f0c05223960b0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
  "programId": "2g4JDRMD7G3dK1PHmCnDAycKzd6e5sdhxqGBbs264zwz",
}
`;

exports[`SVM Escrow src factory should parse create instruction 2 1`] = `
{
  "dutchAuctionDataHash": "0xadbb6721b4fce525bf9d4665dc3c5f53b59dd965131d541ed5da6e393da9bb68",
  "escrowParams": {
    "dstChainId": 1,
    "dstSafetyDeposit": 187114474260000n,
    "hashLock": "0xca4293ac3931ba233bc5306d86ba1ac660fb602ebf20b592af09de3b0448dae3",
    "srcChainId": 501,
    "srcSafetyDeposit": 15213n,
    "timeLocks": "0x0000000000000240000001c80000002400000390000003180000027c000000b4",
  },
  "expirationTime": 1753378539n,
  "extraDetails": {
    "allowMultipleFills": false,
    "resolverCancellationConfig": {
      "cancellationAuctionDuration": 1,
      "maxCancellationPremium": "1",
    },
    "salt": 1504783724301932776n,
    "srcAssetIsNative": true,
  },
  "orderInfo": {
    "dstToken": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
    "maker": "93FP8NG2JrScb9xzNsJrzAze8gJJtr1TgQWUCHDgP3BW",
    "minDstAmount": 17339608n,
    "receiver": "0x962a836519109e162754161000d65d9dc027fa0f",
    "srcAmount": 100000000n,
    "srcToken": "So11111111111111111111111111111111111111112",
  },
}
`;
